--- a/src/components/_common/navbar/navbar.module.css
+++ b/src/components/_common/navbar/navbar.module.css
@@ -44,7 +44,7 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   place-items: center;
-  width: 1100px;
+  width: 1200px;
 }
 
 #nav_bar a {
